--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@worldcoin/minikit-js": "1.5.0",
+    "@worldcoin/minikit-react": "^1.9.2",
     "eruda": "^3.2.3",
     "ethers": "^6.13.5",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.27.2"
   },
   "devDependencies": {
     "@types/node": "^20",
